--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "extract": "node lib/extract.js"
+    "extract": "node lib/extract.js",
+    "extraction": "ts-node lib/BricomartExtractor.ts"
   },
   "dependencies": {
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/node": "^18.11.0",
+    "@types/node-fetch": "^2.6.2",
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
     "node-fetch": "^3.2.10",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5",
     "vite": "^3.1.0"
   }
 }
